app-backend-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      svc: app-backend
  template:
    metadata:
      labels:
        svc: app-backend
    spec:
      containers:
        - name: app-backend
          command:
          - /usr/local/bin/gunicorn
          - wsgi:app
          - --bind
          - 0.0.0.0:8000
          ports:
            - name: beaker-app
              containerPort: 8000
              protocol: TCP
          imagePullPolicy: IfNotPresent
          image: 'cptscience/nodebeaker-app:v2-alpha3'
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: app-backend
spec:
  type: ClusterIP
  ports:
  - name: beaker-app
    port: 8000
    protocol: TCP
  selector:
    svc: app-backend
