app-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-frontend
spec:
  type: LoadBalancer
  ports:
  - name: web
    port: 80
    targetPort: 8081
    protocol: TCP
  selector:
    svc: app-frontend
