namespace-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: namespace-frontend
  namespace: default
spec:
  type: LoadBalancer
  ports:
  - name: web
    port: 80
    protocol: TCP
  selector:
    svc: app-frontend
