simple-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-app
  labels:
    svc: simple-app
spec:
  containers:
    - name: backend
      image: cptscience/nodebeaker:v9-amd64
      command: ["/usr/bin/supervisord", "-n"]
      ports:
        - name: web
          containerPort: 8080
          protocol: TCP
  restartPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: simple-app
spec:
  ports:
  - name: web
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    svc : simple-app
