isolate-test_ns-network_policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: isolate-test-ns
  namespace: test
spec:
  podSelector:
    matchLabels:
      env: test
      svc: app-backend
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          purpose: test
